[gd_scene load_steps=8 format=3 uid="uid://bi5snt7xdwt5f"]

[ext_resource type="Script" path="res://scripts/map.gd" id="1_xhs4v"]
[ext_resource type="Texture2D" uid="uid://urrf1pif5xgn" path="res://assets/icon_red.svg" id="2_swisp"]
[ext_resource type="Texture2D" uid="uid://c6togn4of8yj8" path="res://assets/icon_yellow.svg" id="3_k8qq1"]

[sub_resource type="Curve2D" id="Curve2D_erf43"]
_data = {
"points": PackedVector2Array(-7.11583, 1.66677, 7.11583, -1.66677, 208, 163, -121.687, -358.206, 121.687, 358.206, 719, 378)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_dv8qn"]
_data = {
"points": PackedVector2Array(0.651787, -10.9355, -0.651787, 10.9355, 719, 379, -264.106, 39.22, 264.106, -39.22, 955, 701)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_dygct"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 956, 701, 0, 0, 0, 0, 1297, 666)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_ebp10"]
_data = {
"points": PackedVector2Array(-4.60271, 0.901561, 4.60271, -0.901561, 1288, 665, 54.8449, -321.357, -54.8449, 321.357, 1710, 881)
}
point_count = 2

[node name="Map" type="Node2D"]
script = ExtResource("1_xhs4v")

[node name="CurrentLevel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 918.0
offset_top = 105.0
offset_right = 1105.0
offset_bottom = 174.0
scale = Vector2(1.00123, 1)
theme_override_font_sizes/font_size = 50
text = "Current"

[node name="LevelIcons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="0Math" type="TextureRect" parent="LevelIcons"]
layout_mode = 0
offset_left = 653.0
offset_top = 306.0
offset_right = 781.0
offset_bottom = 434.0
texture = ExtResource("2_swisp")

[node name="1Sacrifice" type="TextureRect" parent="LevelIcons"]
layout_mode = 0
offset_left = 889.0
offset_top = 622.0
offset_right = 1017.0
offset_bottom = 750.0
texture = ExtResource("2_swisp")

[node name="2ShootingBalls" type="TextureRect" parent="LevelIcons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 16.128
anchor_top = 12.773
anchor_right = 16.128
anchor_bottom = 12.773
offset_left = 575.88
offset_top = 85.08
offset_right = 703.88
offset_bottom = 213.08
texture = ExtResource("2_swisp")

[node name="NextButton" type="Button" parent="."]
offset_left = 1755.0
offset_top = 993.0
offset_right = 1840.0
offset_bottom = 1024.0
scale = Vector2(1.00782, 1.00461)
text = "Next level"

[node name="Rome" type="Sprite2D" parent="."]
position = Vector2(195, 149)
texture = ExtResource("3_k8qq1")

[node name="Zeroland" type="Sprite2D" parent="."]
position = Vector2(1710, 880)
texture = ExtResource("3_k8qq1")

[node name="Ship" type="Sprite2D" parent="."]

[node name="Curves" type="Node2D" parent="."]

[node name="Path0" type="Path2D" parent="Curves"]
position = Vector2(-3, -2)
curve = SubResource("Curve2D_erf43")

[node name="PathFollow2D" type="PathFollow2D" parent="Curves/Path0"]
position = Vector2(208, 163)
rotation = -0.230087

[node name="Path1" type="Path2D" parent="Curves"]
curve = SubResource("Curve2D_dv8qn")

[node name="PathFollow2D" type="PathFollow2D" parent="Curves/Path1"]
position = Vector2(719, 379)
rotation = 1.63033

[node name="Path3" type="Path2D" parent="Curves"]
curve = SubResource("Curve2D_dygct")

[node name="PathFollow2D" type="PathFollow2D" parent="Curves/Path3"]
position = Vector2(956, 701)
rotation = -0.102281

[node name="Path4" type="Path2D" parent="Curves"]
curve = SubResource("Curve2D_ebp10")

[node name="PathFollow2D" type="PathFollow2D" parent="Curves/Path4"]
position = Vector2(1288, 665)
rotation = -0.193427
